gccida/g0/expand_mult
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_mult/src/expmed.c:2809:19: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  expand_mult( machine_mode mode, rtx op0, rtx op1, rtx target, int unsignedp) 
                  ^
                  enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_mult/src/expmed.c:2818:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_mult/src/expmed.c:2819:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_mult/src/expmed.c:2822:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v16; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_mult/src/expmed.c:2825:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v19; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_mult/src/expmed.c:2828:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v22; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_mult/src/expmed.c:2831:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v25; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_mult/src/expmed.c:2834:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v28; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_mult/src/expmed.c:2855:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode nmode; // [rsp+2F4h] [rbp-3Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_mult/src/expmed.c:2859:13: error: expected expression
expand_mult::$15A4585A4BD47F0CBB7A268DC7D7DA95 variant; // [rsp+30Ch] [rbp-24h] 
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_mult/src/expmed.c:2866:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)op1 + 2)] != MODE_INT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_mult/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_mult/src/expmed.c:2880:1: error: use of undeclared identifier 'variant'
variant = basic_variant; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_mult/src/expmed.c:2880:11: error: use of undeclared identifier 'basic_variant'
variant = basic_variant; 
          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_mult/src/expmed.c:2899:1: error: use of undeclared identifier 'variant'
variant = negate_variant; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_mult/src/expmed.c:2899:11: error: use of undeclared identifier 'negate_variant'
variant = negate_variant; 
          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_mult/src/expmed.c:2910:1: error: use of undeclared identifier 'variant'
variant = add_variant; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_mult/src/expmed.c:2910:11: error: use of undeclared identifier 'add_variant'; did you mean 'add_target'?
variant = add_variant; 
          ^~~~~~~~~~~
          add_target
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_mult/src/expmed.c:2849:5: note: 'add_target' declared here
rtx add_target; // [rsp+2C8h] [rbp-68h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_mult/src/expmed.c:2938:40: error: use of undeclared identifier 'variant'; did you mean 'vprintf'?
if ( opno != alg.ops - 1 || !target || variant == add_variant || preserve ) 
                                       ^~~~~~~
                                       vprintf
/usr/include/stdio.h:333:12: note: 'vprintf' declared here
extern int vprintf (const char *__restrict __format, _G_va_list __arg);
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_mult/src/expmed.c:2938:51: error: use of undeclared identifier 'add_variant'; did you mean 'add_target'?
if ( opno != alg.ops - 1 || !target || variant == add_variant || preserve ) 
                                                  ^~~~~~~~~~~
                                                  add_target
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_mult/src/expmed.c:2849:5: note: 'add_target' declared here
rtx add_target; // [rsp+2C8h] [rbp-68h] 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_mult/src/obj/expmed.o] Error 1
